--- a/ejemplo.html
+++ b/ejemplo.html
@@ -11,7 +11,7 @@
 	<h1>EJEMPLO DE MAQUETACION EN HTML 5 - Maqueta #1 </h1>
 </header>
 <section>
-
+Cambio 1
 
 <p>Lorem ipsum dolorsit amet...</p>
 <p>Donec ligula arcu,... </p>
